2007-04-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c (Cairo::Context#stroke,
	Cairo::Context#fill, Cairo::Context#clip): accept 'prserve' option
	to change XXX and XXX_preserve.
	* src/lib/cairo/context.rb (Cairo::Context#stroke_preserve,
	Cairo::Context#fill_preserve, Cairo::Context#clip_preserve): moved
	from src/rb_cairo_context.c.

2007-04-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/color.rb (Cairo::Color.parse):
	- supported :hsv and :hsva.
	- added robust parse mode.

	* samples/blur.rb: used convenience interface of Cairo::ImageSurface.new.

	* src/lib/cairo/color.rb: supported HSV.

2007-04-16  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/color.rb, src/lib/cairo/pattern.rb,
	src/lib/cairo/context/color.rb, src/rb_cairo_pattern.c: improved
	Cairo::Color interface.

	* sample/: used Cairo::Color.

	* src/lib/cairo/color.rb: added validation.

	* misc/update-colors.rb: supported X11 color names.
	* src/lib/cairo/colors.rb: updated.

	* misc/update-colors.rb: added colors.rb generator that extracts
	popular colors from Wikipedia:List_of_colors page.

	* src/lib/cairo/colors.rb: added popular colors generated by
	updated-colors.rb.

	* src/lib/cairo/color.rb: added high-level color class including
	CMYK support.

	* src/rb_cairo_pattern.c, src/lib/cairo.rb,
	src/lib/cairo/context.rb, src/lib/cairo/pattern.rb: supported
	Cairo::Color.

2007-04-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c
	(cr_push_group): added error handling.
	(cr_pop_group_to_source): updated source class.

	* src/lib/cairo/context.rb, src/lib/cairo/context/blur.rb: added
	Cairo::Context#pseudo_blur.

	* samples/blur.rb: added a sample script for Cairo::Context#pseudo_blur.

	* src/rb_cairo_context.c
	(cr_pop_group): returned pattern.
	(cr_push_group): returned popped pattern if not pop_to_source.

2007-04-13  Kouhei Sutou  <kou@cozmixng.org>

	* Rakefile: supported 'rake release'.

	* extconf.rb, Rakefile: supported RubyGems.
